--- a/app/src/main/res/layout/activity_required_bio.xml
+++ b/app/src/main/res/layout/activity_required_bio.xml
@@ -12,6 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
+        android:padding="@dimen/_15dp"
         android:fitsSystemWindows="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
