--- a/app/src/main/res/layout/activity_required_bio.xml
+++ b/app/src/main/res/layout/activity_required_bio.xml
@@ -7,6 +7,18 @@
     android:background="#FBFAFA"
     tools:context=".additionalSettings.RequiredBioActivity">
 
+    <ImageView
+        android:id="@+id/backgroundImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="0dp"
